--- a/软件安装优化和环境配置/Databases/Mysql/my.cnf
+++ b/软件安装优化和环境配置/Databases/Mysql/my.cnf
@@ -5,3 +5,12 @@ mysqld
 slow_query_log=off|on     --是否开启慢查询日志
 slow_query_log_file=filename --指定保存路径及文件名，默认为数据文件目录，hostname-slow.log
 long_query_time=2    --指定多少秒返回查询的结果为慢查询
+
+#bin-log
+log-bin=mysql-bin
+binlog_format=mixed			 //binlog日志格式，mysql默认采用
+server-id = 10
+expire_logs_days = 7
+max_binlog_size         = 100m                       //binlog每个日志文件大小
+binlog_cache_size       = 4m                        //binlog缓存大小
+max_binlog_cache_size   = 512m                     //最大binlog缓存大小
