--- a/常用服务配置和优化/容器编排/Kubernetes/pod详解/kubernetes-pod.yml
+++ b/常用服务配置和优化/容器编排/Kubernetes/pod详解/kubernetes-pod.yml
@@ -3,7 +3,7 @@ apiVersion: v1       #必选，版本号，例如v1
 kind: Pod       #必选，Pod
 metadata:       #必选，元数据, name 是必需的元数据项
   name: string       #必选，Pod名称
-  namespace: string    #必选，Pod所属的命名空间
+  namespace: string    #必选，Pod所属的命名空间 不写则是deafult
   labels:      #自定义标签
     - name: string     #自定义标签名字
   annotations:       #自定义注释列表
