add nginx cache conf

--- a/常用服务配置和优化/Nginx/nginx.conf
+++ b/常用服务配置和优化/Nginx/nginx.conf
@@ -10,7 +10,7 @@ events {
 }
 http {
     server_tokens                off;
-#    server_tag                   off;
+    server_tag                   off;
     sendfile                     on;
     tcp_nopush                   on;
     tcp_nodelay                  on;
@@ -28,8 +28,38 @@ http {
                                  '$status $body_bytes_sent "$http_referer" '
                                  '"$http_user_agent" [ $request_body ] - $request_time';
 
-    access_log                   off;
-    error_log                    /var/log/error.log crit;
+   log_format logstash_json '{"@timestamp":"$time_iso8601",'
+						    '"@source":"$server_addr",'
+						    '"head_versioncode":"$http_versioncode",'
+						    '"head_watermark":"$http_watermark",'
+						    '"head_platform":"$http_platform",'
+						    '"head_channel":"$http_channel",'
+						    '"clientip":"$remote_addr",'
+						    '"remote_user":"$remote_user", '
+						    '"hostname":"$http_host",'
+						    '"request":"$request",'
+						    '"request_method":"$request_method",'
+						#   '"requestbody":"$request_body",'
+						    '"status":"$status",'
+						    '"upstream_status":"$upstream_status",'
+						    '"api_path":"$uri",'
+						    '"size":$body_bytes_sent,'
+						    '"referer":"$http_referer",'
+						    '"agent":"$http_user_agent",'
+						    '"x_forwarded_for":"$http_x_forwarded_for",'
+						    '"upstream_addr":"$upstream_addr",'
+						    '"responsetime":$request_time,'
+						    '"upstream_response_time":"$upstream_response_time",'
+                            '"x_forwarded_for":"$http_x_forwarded_for",'
+						#   '"userId":"$http_userId",'
+						    '"token":"$http_token"}';
+
+	limit_req_zone $request_body zone=one:1m rate=3r/m;       #限制ip在同一时间段的访问次数.
+    proxy_cache_path  /tmp/cache levels=1:2   keys_zone=cache_one:200m inactive=1d max_size=5g;      #设置缓存数据的相关信息
+    add_header cachestatus $upstream_cache_status;   #添加本条可以在浏览器中看到是否命中缓存
+
+    access_log                   /var/log/nginx/access.log main;
+    error_log                    /var/log/nginx/error.log crit;
 
     server_names_hash_bucket_size 128;
     default_type                 application/octet-stream;
@@ -41,7 +71,7 @@ http {
 
     client_body_buffer_size      4K;
     client_header_buffer_size    16k;
-    client_max_body_size         100M;
+    client_max_body_size         2M;
     large_client_header_buffers  4 64k;
 
     gzip                         on;
