--- a/常用服务配置和优化/Nginx/nginx_logrotate.conf
+++ b/常用服务配置和优化/Nginx/nginx_logrotate.conf
@@ -21,3 +21,9 @@ server {
 }
 
 ## logname  host.access-2020-07-30-20.log
+## 方式二
+## http 块添加  使用 $logdate 变量
+## map $time_iso8601 $logdate {
+##    '~^(?<ymd>\d{4}-\d{2}-\d{2})' $ymd;
+##    default    'date-not-found';
+## }
